Homework/HW_05/HW_05_A/compiling_error.txt
/Users/jeremystark/Documents/GitHub/ENGR-197/Homework/HW_05/HW_05_A/stark_hw_05_a.c:39:10: warning: missing terminating '"' character [-Winvalid-pp-token]
  printf("Time\tWife?\");
         ^
/Users/jeremystark/Documents/GitHub/ENGR-197/Homework/HW_05/HW_05_A/stark_hw_05_a.c:39:10: error: expected expression
/Users/jeremystark/Documents/GitHub/ENGR-197/Homework/HW_05/HW_05_A/stark_hw_05_a.c:44:2: error: expected '}'
}
 ^
/Users/jeremystark/Documents/GitHub/ENGR-197/Homework/HW_05/HW_05_A/stark_hw_05_a.c:16:1: note: to match this '{'
{
^
1 warning and 2 errors generated.
